--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      height: 100vh; /* Adjust height as needed */
+      height: 100vh; 
 
     }
   
     #dropArea {
       /*border: 2px dashed #ccc; /* Add a border to visualize the drop area */
       width: 100%;
-      padding: 20px; /* Adjust padding as needed */
+      padding: 50px; 
       text-align: center;
       box-shadow: 0 0 15px 5px rgba(0, 0, 255, 0.3); /* Blurred blue shadow */
 
